# openmeter-pod-runtime-watcher

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  index.yaml
.github/workflows/: docker.yaml  helm-oci.yaml  helm.yaml
charts/openmeter-pod-runtime-watcher/: CHANGELOG.md  Chart.yaml  README.md  values.yaml
charts/openmeter-pod-runtime-watcher/templates/: _helpers.tpl  clusterrole.yaml  deployment.yaml  role.yaml  role_binding.yaml  serviceaccount.yaml
examples/k8s-manifests/: pod.yaml
src/: main.rs  openmeter.rs  pod.rs  settings.rs
